Random Graph Generator v1.1